# allsorted

./: .allsorted.example.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TESTING.md
examples/: README.md  basic_organize.py  custom_rules.py  metadata_organization.py
scripts/: allsorted.bat  install.bat  install.sh  run_checks.sh  run_tests.sh  uninstall.bat  uninstall.sh  verify_distribution.sh
src/: main.py
src/allsorted/: __init__.py  __main__.py  analyzer.py  checkpoint.py  classifier.py  cli.py  config.py  dependencies.py  executor.py  logging_config.py  magic_classifier.py  metadata_extractor.py  models.py  planner.py  reporter.py  utils.py  validator.py  watcher.py  wizard.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_integrations.py
tests/unit/: __init__.py  test_analyzer.py  test_config.py  test_models.py  test_utils.py
